mobile nav z-index fix

--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@
     align-items: center;
     justify-content: center;
     cursor: pointer;
+    z-index: 1;
 }
 .navigation:hover {
     box-shadow:inset 0px 0px 15px -5px rgb(0 0 0 / 30%);
